[package]
edition = "2021"
name = "dodgy_2d"
version = "0.4.0"

description = "An implementation of ORCA, a local collision avoidance algorithm for 2D."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
license = "MIT"
readme = "README.md"
repository = "https://github.com/andriyDev/dodgy"

categories = ["game-development"]
keywords = ["orca", "rvo", "collision", "avoidance", "navigation"]

[dependencies]
glam = "0.25.0"
