[package]
edition = "2021"
name = "dodgy_2d"
version = "0.5.2"

description = "An implementation of ORCA, a local collision avoidance algorithm for 2D."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/andriyDev/dodgy"

categories = ["game-development"]
keywords = ["orca", "rvo", "collision", "avoidance", "navigation"]

[dependencies]
glam = "0.28.0"
rand = "0.8.5"
